bynkc/tests/fixtures/positive/21_if_simple/input.karn
commons test {
  fn absVal(n: Int) -> Int {
    if n < 0 {
      -n
    } else {
      n
    }
  }
}
