bynkc/tests/fixtures/negative/29_field_access_on_non_record/input.karn
commons test {
  fn bad(n: Int) -> Int {
    n.foo
  }
}
